--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -70,21 +70,15 @@ div#wrapper {
 div#contact {
   background-color: #806a2e;
   width: auto;
-  margin: 20px;
-  border: 2px solid #4c2719;
+  margin: 0 20px;
+  padding: 25px 40px;
   font-size: 1.4em;
-
-  h2 {
-    margin: 15px;
-    color: #ddd;
-  }
 
   p {
     line-height: 175%;
     letter-spacing: 0.07em;
 
     font-size: 0.9em;
-    margin-left: 30px;
     color: #ddd
   }
 }
