--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -1,3 +1,5 @@
-<header class="index_header">Editing role</header>
+<header class="index_header">
+  <span class="index_header_text">Edit role:</span>
+</header>
 
 <%= render 'form' %>
