--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,3 +1,5 @@
-<header class="index_header">New role</header>
+<header class="index_header">
+  <span class="index_header_text">New role:</span>
+</header>
 
 <%= render 'form' %>
