--- a/app/views/supports/new.html.erb
+++ b/app/views/supports/new.html.erb
@@ -1,4 +1,6 @@
-<header class="index_header">New support user</header>
+<header class="index_header">
+  <span class="index_header_text">New support user:</span>
+</header>
 
 <%= form_for :support, url: supports_path do |f| %>
     <% if @support.errors.any? %>
