--- a/app/views/ticket_states/edit.html.erb
+++ b/app/views/ticket_states/edit.html.erb
@@ -1,3 +1,5 @@
-<header class="index_header">Editing ticket state</header>
+<header class="index_header">
+  <span class="index_header_text">Edit ticket state:</span>
+</header>
 
 <%= render 'form' %>
