--- a/app/views/tickets/_table_row.html.erb
+++ b/app/views/tickets/_table_row.html.erb
@@ -2,8 +2,8 @@
   <td><%= ticket.uuid %></td>
   <td><%= ticket.current_status %></td>
   <td><%= ticket.current_support %></td>
-  <td><%= h ticket.username %></td>
-  <td><%= h ticket.email %></td>
+  <!--<td><%#= h ticket.username %></td>-->
+  <!--<td><%#= h ticket.email %></td>-->
   <td><%= h ticket.subject %></td>
 
   <% if self.action_name == 'index' %>
