--- a/app/views/layouts/contact.html.erb
+++ b/app/views/layouts/contact.html.erb
@@ -1,6 +1,6 @@
+<header class="index_header">Contact information:</header>
 <div id="contact">
-    <h2>Contact information:</h2>
-    <p>Taras Brodovych:<br>
+    <p><b>Taras Brodovych:</b><br>
     e-mail: skydion@ukr.net<br>
     phone: +(038) 068 842 43 04 <br>
     skype: skydion</p>
