--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,18 @@
-<header id="page_header" role="banner" xmlns="http://www.w3.org/1999/html">
+<header id="page_header" role="banner">
   <nav id="utility">
-    <p>
       <% if authorized? %>
-          You are logged in as <strong><%= session[:login] %></strong>
-          <%= link_to '[Your Account]', controller: 'supports', action: 'edit', id: session[:user_id] %>
-          <%= link_to '[Logout]', controller: 'supports', action: 'logout' %>
+        <div align="right" style="line-height: 24px;">
+          <span style="vertical-align: top; padding-right: 10px;">
+            You are logged in as <strong><%= session[:login] %></strong>
+          </span>
+          <span>
+            <%= link_to image_tag('edit-user-icon-24.png'), controller: 'supports', action: 'edit', id: session[:user_id] %>
+            <%= link_to image_tag('logout-icon-24.png'), controller: 'supports', action: 'logout' %>
+          </span>
+        </div>
       <% else %>
           <%= content_tag :div, render(partial: 'layouts/login'), :id => 'form_login' %>
       <% end %>
-    </p>
   </nav>
 
   <nav id="main_nav" role="navigation">
