--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -2,7 +2,7 @@
     setMainHeight();
 </script>
 
-<div class="container" xmlns="http://www.w3.org/1999/html">
+<div class="container">
   <div id="content">
     <div class="header">
       <h2 class="comment_header">
