--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -28,7 +28,8 @@
     </div>
 
     <div class="comments_area">
-      <%= render partial: 'comments', locals: {ticket: @ticket} %>
+      <% @comments = @ticket.comments.select(&:persisted?) %>
+      <%= render partial: 'comments', locals: {comments: @comments} %>
     </div>
   </div>
 </div>
