Some code and css improvement

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,7 +47,7 @@ table.fixed {
 }
 
 table.fixed tr:hover {
-    background-color: darkkhaki;
+    background-color: #d7d7af;
 }
 
 table.fixed td:nth-of-type(1) {
