--- a/app/views/tickets/_comments.html.erb
+++ b/app/views/tickets/_comments.html.erb
@@ -6,6 +6,7 @@
             <td>#<%= comment.id %></td>
 
             <td class="comment_body">
+              <p class="comment_title"><%= comment.created_at %></p>
               <%= h comment.body %>
             </td>
 
