--- a/app/views/tickets/_comments.html.erb
+++ b/app/views/tickets/_comments.html.erb
@@ -6,7 +6,12 @@
             <td>#<%= comment.id %></td>
 
             <td class="comment_body">
-              <p class="comment_title"><%= comment.created_at %></p>
+              <p class="comment_title">
+                <span>
+                  <%= @ticket.owner_name(comment.owner_id).upcase %>,
+                  <%= comment.created_at %>
+                </span>
+              </p>
               <%= h comment.body %>
             </td>
 
