--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,28 +12,18 @@
  *
  *= require_tree .
  *= require_self
- *= require layout
- *= require navigation
- *= require notifications
- *= require text
- *= require forms
  */
 
 table {
     width: 100%;
     overflow: auto;
-    /*border-collapse: collapse;*/
 }
 
-td {
-    padding-left: 3px;
-}
-
-.even {
+tr.even {
     background-color: linen;
 }
 
-.odd {
+tr.odd {
     background-color: lightblue;
 }
 
@@ -67,12 +57,6 @@ table.fixed td:nth-of-type(3) {
 
 body {
     background-image: url('wood_bg.jpg');
-}
-
-body, p, ol, ul, td {
-    font-family: verdana, arial, helvetica, sans-serif;
-    font-size: 13px;
-    line-height: 18px;
 }
 
 .field_with_errors {
