--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header id="page_header" role="banner">
+<header id="page_header">
   <nav id="utility">
       <% if authorized? %>
         <div align="right" style="line-height: 24px;">
@@ -11,11 +11,11 @@
           </span>
         </div>
       <% else %>
-          <%= content_tag :div, render(partial: 'layouts/login'), :id => 'form_login' %>
+        <%= content_tag :div, render(partial: 'layouts/login'), :id => 'form_login' %>
       <% end %>
   </nav>
 
-  <nav id="main_nav" role="navigation">
+  <nav id="main_nav">
     <ul>
       <% if authorized? %>
           <li><%= link_to 'Tickets', controller: 'tickets' %></li>
