--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -5,7 +5,7 @@
 <div class="container">
   <div id="content">
     <div class="header">
-      <h2 class="comment_header">
+      <h2 class="comments_area_header">
         <span>
             <%= @ticket.owner_name(@ticket.support_id).upcase %>, UUID: <%= @ticket.uuid %>
         </span>
