--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -42,6 +42,8 @@ footer#page_footer {
         &:hover,
         &:visited,
         &.active {
+          padding: 0 10px;
+
           color: #fff;
         }
       }
