--- a/app/views/layouts/contact.html.erb
+++ b/app/views/layouts/contact.html.erb
@@ -1,7 +1,14 @@
-<header class="index_header">Contact information:</header>
+<header class="index_header">
+  <span class="index_header_text">Contact information:</span>
+</header>
+
 <div id="contact">
-    <p><b>Taras Brodovych:</b><br>
-    e-mail: skydion@ukr.net<br>
-    phone: +(038) 068 842 43 04 <br>
-    skype: skydion</p>
+    <p>
+      <b>
+        Taras Brodovych:
+      </b><br>
+        e-mail: skydion@ukr.net<br>
+        phone: +(038) 068 842 43 04 <br>
+        skype: skydion
+    </p>
 </div>
