--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -1,5 +1,5 @@
-<header class="index_header">
-  <span class="index_header_text">Edit role:</span>
-</header>
+<%= header_data do %>
+    Edit role:
+<% end %>
 
 <%= render 'form' %>
