--- a/app/views/supports/change_password.html.erb
+++ b/app/views/supports/change_password.html.erb
@@ -1,8 +1,8 @@
 <%= header_data do %>
-    Change password:
+    Change password for <%= @support.login.upcase %>:
 <% end %>
 
-<%= form_for :support, url: support_path(@support), method: :patch do |f| %>
+<%= form_for @support, url: support_path(@support), method: :patch do |f| %>
     <% if @support.errors.any? %>
         <div id='error_explanation'>
           <h2><%= pluralize(@support.errors.count, 'error') %> prohibited this support from being saved:</h2>
@@ -20,23 +20,23 @@
           <%= f.label 'New password' %>
         </td>
         <td align="left" style="padding-left: 20px;">
-          <%= f.password_field :password, size: 40 %>
+          <%= raw f.password_field :password, size: 40 %>
         </td>
       </tr>
 
       <tr bgcolor="#faebd7" style="height: 30px;">
         <td align="right" style="font-weight: bold;">
-          <%= label_tag 'compare_password', 'Compare password' %>
+          <%= f.label 'Repeat password' %>
         </td>
         <td align="left" style="padding-left: 20px;">
-          <%= text_field_tag 'compare_password', size: 40 %>
+          <%= raw f.password_field :password, size: 40 %>
         </td>
       </tr>
 
       <tr bgcolor="#deb887" style="height: 30px">
         <td></td>
         <td align="right" style="padding-right: 20px">
-          <%= f.submit %>
+          <%= f.submit 'Update password' %>
         </td>
       </tr>
     </table>
