--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -1,35 +1,3 @@
-fieldset label {
-  display: block;
-
-  font-size: 1.1em;
-  font-weight: bold;
-  padding-left: 10px;
-}
-
-fieldset.inline label {
-   display: inline;
-   width: 240px;
-}
-
-fieldset.inline label,
-fieldset li.inline label {
-  display: inline;
-  width: 240px;
-}
-
-fieldset li.required label {
-   font-weight: bold;
-}
-
-fieldset div.field_with_errors {
-  label {
-    color: #f00; /* red */
-  }
-  input {
-    background: #ffc; /* light yellow */
-  }
-}
-
 .label {
   padding-right: 3px;
 }
@@ -41,13 +9,21 @@ fieldset div.field_with_errors {
 }
 
 input {
-  &:focus, &:hover {
+   &:focus, &:hover {
     background-color: #cdc1a8;
   }
 
-  //height: 1.5em;
   border: 1px solid #4c2719;
   border-radius: 0px;
+}
+
+input[type="submit"] {
+  color: #373737;
+  padding: 0 8px;
+}
+
+input[type="text"], input[type="password"] {
+  color: #373737;
   padding-left: 3px;
 }
 
