--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
         <%= link_to 'Contact', '/contact' %>
         <div class="search"><%= render 'layouts/search' %></div>
     </li>
-    <% !authorized? do %>
+    <% if !authorized? %>
       <li><%= link_to 'Send a bug', controller: 'tickets', action: 'new' %></li>
     <% end %>
   </ul>
