--- a/app/views/supports/edit.html.erb
+++ b/app/views/supports/edit.html.erb
@@ -1,6 +1,6 @@
-<header class="index_header">
-  <span class="index_header_text">Edit support user:</span>
-</header>
+<%= header_data do %>
+    Edit support user:
+<% end %>
 
 <%= form_for :support, url: support_path(@support), method: :patch do |f| %>
     <% if @support.errors.any? %>
@@ -16,30 +16,25 @@
 
     <table style="border-collapse: collapse;">
       <tr bgcolor="#faebd7" style="height: 30px;">
+        <td bgcolor="#faebd7" style="height: 30px;"></td>
+        <td align="right" style="padding: 3px"><%= link_to image_tag('password-icon-24.png'), change_password_support_path, class: 'button' %></td>
+      </tr>
+
+      <tr bgcolor="#faebd7" style="height: 30px;">
         <td align="right" style="font-weight: bold;">
           <%= f.label :login %>
         </td>
         <td align="left" style="padding-left: 20px;">
-          <%= raw f.text_field :login, size: 40 %>
+          <%= h(f.text_field :login, size: 40) %>
         </td>
       </tr>
-
-      <!--# TODO: move to reset password function -->
-<!--      <tr bgcolor="#faebd7" style="height: 30px;">
-        <td align="right" style="font-weight: bold;">
-          <%#= f.label :password %>
-        </td>
-        <td align="left" style="padding-left: 20px;">
-          <%#= raw f.password_field :password, size: 40 %>
-        </td>
-      </tr>-->
 
       <tr bgcolor="#faebd7" style="height: 30px;">
         <td align="right" style="font-weight: bold;">
           <%= f.label :first_name %>
         </td>
         <td align="left" style="padding-left: 20px;">
-          <%= raw f.text_field :first_name, size: 40 %>
+          <%= h(f.text_field :first_name, size: 40) %>
         </td>
       </tr>
 
@@ -48,7 +43,7 @@
           <%= f.label :last_name %>
         </td>
         <td align="left" style="padding-left: 20px;">
-          <%= raw f.text_field :last_name, size: 40 %>
+          <%= h(f.text_field :last_name, size: 40) %>
         </td>
       </tr>
 
@@ -57,7 +52,7 @@
           <%= f.label 'E-mail' %>
         </td>
         <td align="left" style="padding-left: 20px;">
-          <%= raw f.text_field :email, size: 40 %>
+          <%= h(f.text_field :email, size: 40) %>
         </td>
       </tr>
 
