--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -2,7 +2,10 @@
     setMainHeight();
 </script>
 
-<%= ticket_states_header_data %>
+<%= header_data do %>
+    Ticket states list:
+    <%= link_to(image_tag('new-icon-24.png'), new_ticket_state_path, class: 'button') %>
+<% end %>
 
 <table>
   <thead>
