--- a/app/views/ticket_states/new.html.erb
+++ b/app/views/ticket_states/new.html.erb
@@ -1,5 +1,5 @@
-<header class="index_header">
-  <span class="index_header_text">New ticket state:</span>
-</header>
+<%= header_data do %>
+    New ticket state:
+<% end %>
 
 <%= render 'form' %>
