--- a/app/views/tickets/_form_add_comment.html.erb
+++ b/app/views/tickets/_form_add_comment.html.erb
@@ -1,10 +1,10 @@
-<div style="margin-left: 20px;">
+<div class="problem">
   <%= form_for ([ticket, ticket.comments.build]) do |f| %>
     <%= f.hidden_field :owner_id, value: session[:user_id] %>
-    <%= f.text_area :body, cols: 120, rows: 5 %>
+    <%= f.text_area :body, cols: 85, rows: 9 %>
 
     <div>
         <%= f.submit %>
     </div>
-    <% end %>
+  <% end %>
 </div>
