--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -4,7 +4,10 @@
 
 <%= header_data do %>
     Roles list:
-    <%= link_to(image_tag('new-icon-24.png'), new_role_path, class: 'button') %>
+
+    <%= admin_area do %>
+        <%= link_to(image_tag('new-icon-24.png'), new_role_path, class: 'button') %>
+    <% end %>
 <% end %>
 
 <table>
