--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -4,7 +4,10 @@
 
 <%= header_data do %>
     Ticket states list:
-    <%= link_to(image_tag('new-icon-24.png'), new_ticket_state_path, class: 'button') %>
+
+    <%= admin_area do %>
+      <%= link_to(image_tag('new-icon-24.png'), new_ticket_state_path, class: 'button') %>
+    <% end %>
 <% end %>
 
 <table>
