Fix support update method for compare new and confirmation password, also fix fome admin_area usage, because it use span tag

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
     <ul>
       <% if authorized? %>
           <li><%= link_to 'Tickets', controller: 'tickets' %></li>
-          <%= admin_area do %>
+          <% if admin? %>
               <li><%= link_to 'Supports', controller: 'supports' %></li>
               <li><%= link_to 'Roles', controller: 'roles' %></li>
               <li><%= link_to 'States', controller: 'ticket_states' %></li>
