--- a/app/views/supports/change_password.html.erb
+++ b/app/views/supports/change_password.html.erb
@@ -20,16 +20,16 @@
           <%= f.label 'New password' %>
         </td>
         <td align="left" style="padding-left: 20px;">
-          <%= raw f.password_field :password, size: 40 %>
+          <%= f.password_field :password, size: 40 %>
         </td>
       </tr>
 
       <tr bgcolor="#faebd7" style="height: 30px;">
         <td align="right" style="font-weight: bold;">
-          <%= f.label 'Repeat password' %>
+          <%= f.label :password_confirmation %>
         </td>
         <td align="left" style="padding-left: 20px;">
-          <%= raw f.password_field :password, size: 40 %>
+          <%= f.password_field :password_confirmation, size: 40 %>
         </td>
       </tr>
 
