--- a/app/views/supports/index.html.erb
+++ b/app/views/supports/index.html.erb
@@ -14,7 +14,7 @@
   <thead>
       <tr>
         <th>Login</th>
-        <%#= admin_area do %>
+        <%# if admin? %>
             <th>Password</th>
         <%# end %>
         <th>First name</th>
