--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= raw role.description %></td>
 
         <td align='center'><%= link_to image_tag('edit-icon.png'), edit_role_path(role) %></td>
-        <%#= admin_area do %>
+        <%# if admin? %>
           <td align='center'><%= link_to image_tag('delete-trash.png'), role, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <%# end %>
       </tr>
