--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -24,9 +24,9 @@
         <td><%= ticket_state.name %></td>
 
         <td align='center'><%= link_to image_tag('edit-icon.png'), edit_ticket_state_path(ticket_state) %></td>
-        <%= admin_area do %>
+        <%# if admin? %>
           <td align='center'><%= link_to image_tag('delete-trash.png'), ticket_state, method: :delete, data: {confirm: 'Are you sure?'} %></td>
-        <% end %>
+        <%# end %>
       </tr>
   <% end %>
   </tbody>
