--- a/app/views/tickets/_table_row.html.erb
+++ b/app/views/tickets/_table_row.html.erb
@@ -12,7 +12,7 @@
       <td align='center'><%= link_to image_tag('show-icon.png'), ticket_path(ticket) %></td>
       <td align='center'><%= link_to image_tag('edit-icon.png'), edit_ticket_path(ticket) %></td>
 
-      <%= admin_area do %>
+      <% if admin? %>
         <td align='center'><%= link_to image_tag('delete-trash.png'), ticket_path(ticket), method: :delete, data: {confirm: 'Are you sure?'} %></td>
       <% end %>
   <% end %>
